--- a/pages/soltuionRequest/solutionRequest.html
+++ b/pages/soltuionRequest/solutionRequest.html
@@ -617,7 +617,7 @@
                       </div>
                     </div>
 
-                    <div class="screen3 mr-3 ml-3" style="">
+                    <div class="screen3 mr-3 ml-3" style="display: none;">
                       <div class="row  screen3-title">
                         <p>
                           <b
@@ -711,7 +711,7 @@
                   </div>
 
                      <!-- Soltuion Screen  -->
-                     <div class="solution-screen3 mr-3 ml-3" style="display: none;">
+                     <div class="solution-screen3 screen4 mr-3 ml-3" style="">
                       <div class="row  screen3-title">
                         <p>
                           <b
@@ -733,7 +733,7 @@
                         <div class="col-md-9">
                           <form>
                             <div class="form-group">
-                              <textarea class="form-control solution-textarea"  id="exampleFormControlTextarea1" rows="3"></textarea>
+                              <textarea class="form-control solution-textarea" placeholder="Add a note"  id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                           </form>
                         </div>
@@ -756,16 +756,16 @@
                                 This is going to take up my time, I'll need to charge the user. 
                               </label>
                             </div>
-                            <input type="text" class="form-control solution-price " aria-describedby="emailHelp" placeholder="" value="0">
+                            <input type="text"  class="form-control solution-price mt-3" aria-describedby="emailHelp" placeholder="" value="0">
                             <small id="emailHelp" class="form-text text-muted">Enter the amount you will charge for solving the problem.  </small>
                           </div>
                        
                         </form>
 </div>                        
                         <div class="row justify-content-center">
-                          <button type="button" class="btn btn-outline-primary mr-3">Primary</button>
+                          <button type="button" class="btn  secondary-btn mr-3">Primary</button>
 
-                          <button type="button" class="btn btn-primary">Replay to Request</button>
+                          <button type="button" class="btn primary-btn">Replay to Request</button>
                         </div>
                       </div>
                     </div>
