--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
               >
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"> <i class="fas fa-search" style="font-size: 1.20vw;"></i></a>
+          </li>
         </ul>
       </nav>
       <!-- /.navbar main -->
@@ -261,7 +264,6 @@
 
         <!-- Sidebar -->
         <div class="sidebar">
-
           <!-- Sidebar Menu -->
           <nav class="mt-2">
             <ul
@@ -274,15 +276,15 @@
                with font-awesome or any other icon font library -->
               <li class="nav-item">
                 <a href="./images/home_icn.png" class="nav-link">
-                  <i class="fas fa-home"></i>
+                  <i class="home-icon fa"></i>
                   <p>
                     Home
                   </p>
                 </a>
               </li>
               <li class="nav-item menu-open active">
-                <a href="#" class="nav-link ">
-                  <i class="fas fa-tachometer-alt"></i>
+                <a href="#" class="nav-link">
+                  <i class="dashboard-icon fa"></i>
                   <p>
                     Dashboard
                   </p>
@@ -290,7 +292,7 @@
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">
-                  <i class="fas fa-users"></i>
+                  <i class="connection-icon fa"></i>
                   <p>
                     Connections
                   </p>
@@ -298,7 +300,7 @@
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">
-                  <i class="nav-icon fas fa-edit"></i>
+                  <i class="connection-icon fa"></i>
                   <p>
                     Explore
                   </p>
@@ -306,7 +308,7 @@
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">
-                  <i class="nav-icon fas fa-table"></i>
+                  <i class="contact-icon fa"></i>
                   <p>
                     Contact Us
                   </p>
@@ -314,7 +316,7 @@
               </li>
               <li class="nav-item">
                 <a href="pages/calendar.html" class="nav-link">
-                  <i class="nav-icon fas fa-calendar-alt"></i>
+                  <i class="premium-icon fa"></i>
                   <p>
                     Upgrade to Premium!
                   </p>
@@ -322,7 +324,8 @@
               </li>
               <li class="nav-item">
                 <a href="pages/calendar.html" class="nav-link">
-                  <i class="fas fa-cloud"></i>
+                  <span class="numberCircle"><span>30</span></span>
+
                   <p>
                     Cloud Storage
                   </p>
@@ -330,7 +333,7 @@
               </li>
               <li class="nav-item">
                 <a href="pages/calendar.html" class="nav-link">
-                    <i class="fas fa-chart-pie"></i>
+                  <i class="premium-icon fa"></i>
                   <p>
                     Analytics
                   </p>
