--- a/pages/network/network.html
+++ b/pages/network/network.html
@@ -554,7 +554,7 @@
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
-                                  <i class="fas fa-question-circle"></i> Request
+                                  <i class="fas fa-paper-plane"></i> Request
                                 </button>
                               </td>
                               <td class="project-actions text-right">
@@ -562,9 +562,8 @@
                                   <i class="fas fa-trash"> </i>
                                   Delete
                                 </a>
-
                                 <a class="btn btn-danger btn-sm" href="#">
-                                  <i class="fa fa-ban" aria-hidden="true"></i>
+                                  <i class="fas fa-ban"></i>
                                   Block
                                 </a>
                               </td>
@@ -604,7 +603,7 @@
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
-                                  <i class="fas fa-question-circle"></i> Request
+                                  <i class="fas fa-paper-plane"></i> Request
                                 </button>
                               </td>
                               <td class="project-actions text-right">
@@ -613,7 +612,7 @@
                                   Delete
                                 </a>
                                 <a class="btn btn-danger btn-sm" href="#">
-                                  <i class="fa fa-ban" aria-hidden="true"></i>
+                                  <i class="fas fa-ban"></i>
                                   Block
                                 </a>
                               </td>
