--- a/pages/editProfile/editprofile.html
+++ b/pages/editProfile/editprofile.html
@@ -325,8 +325,10 @@
                             </li>
                         </ul>
                         <div class="tab-content" id="myTabContent">
-                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                                <p style="background-color: white;color: black;">First Name</p>
+                            <div class="tab-pane fade show active"
+                                style="background-color: white;color: black;border-left:none;" id="home" role="tabpanel"
+                                aria-labelledby="home-tab">
+                                <p>First Name</p>
 
 
 
