--- a/pages/editProfile/editprofile.html
+++ b/pages/editProfile/editprofile.html
@@ -310,7 +310,7 @@
               </ul>
               <div class="tab-content" id="myTabContent">
                 <div
-                  class="tab-pane fade"
+                  class="tab-pane fade home-tab"
                   style="
                     background-color: white;
                     color: black;
@@ -443,8 +443,11 @@
                               pattern="[1-9]{1}[0-9]{9}" maxlength="10" id="mobileNo"
                               placeholder="Enter Mobile Number">
                       </div>
+                      <div class="row justify-content-center">
                       <button class="saveBtn">Save</button>
+                      </div>
                   </div>
+
                   <div class="col-md-3"></div>
               </div>
                 </div>
@@ -485,24 +488,127 @@
                       <div class="skil-section">
                         <div class="row">
                           <div class="col-md-2">
-                            <div class="skill-icon">
+                            <div class="skill-icon active-skill">
                               <img src="../../images/painting_1.png" width="100"/>
                               </div>
-                              <p>Painting</p>
-                            
+                              <span>Painting</span>
                           </div>
-                          <div class="col-md-2">test</div>
-                          <div class="col-md-2">test</div>
-                          <div class="col-md-2">test</div>
-                          <div class="col-md-2">test</div>
-                          <div class="col-md-2">test</div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/Literature.png" width="100"/>
+                            </div>
+                            <span>Literature</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
                         </div>
+                        <div class="row">
+                          <div class="col-md-2">
+                            <div class="skill-icon active-skill">
+                              <img src="../../images/painting_1.png" width="100"/>
+                              </div>
+                              <span>Painting</span>
+                          </div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/Literature.png" width="100"/>
+                            </div>
+                            <span>Literature</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-md-2">
+                            <div class="skill-icon active-skill">
+                              <img src="../../images/painting_1.png" width="100"/>
+                              </div>
+                              <span>Painting</span>
+                          </div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/Literature.png" width="100"/>
+                            </div>
+                            <span>Literature</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                        </div>
+                        <div class="row">
+                          <div class="col-md-2">
+                            <div class="skill-icon active-skill">
+                              <img src="../../images/painting_1.png" width="100"/>
+                              </div>
+                              <span>Painting</span>
+                          </div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/Literature.png" width="100"/>
+                            </div>
+                            <span>Literature</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                          <div class="col-md-2">  <div class="skill-icon">
+                            <img src="../../images/painting_1.png" width="100"/>
+                            </div>
+                            <span>Painting</span></div>
+                        </div>
+                      </div>
+                      <div class="row mt-3 mb-3 justify-content-center">
+                        <button type="button" class="btn primary-btn"> <i class="fas fa-save"></i> Save</button>
+
                       </div>
                     </div>
                   </div>
                 </div>
                 <div
-                  class="tab-pane fade"
+                  class="tab-pane fade achievement-tab"
                   id="contact"
                   role="tabpanel"
                   aria-labelledby="contact-tab"
@@ -514,6 +620,17 @@
                   <div class="Achive_img">
                     <img src="../../images/archiveImg.png" alt="" />
                   </div>
+                  <form class="mt-3 mt-3">
+                    <div class="form-group">
+
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" />
+                      <small id="emailHelp" class="form-text text-muted "><i class="fas fa-paperclip"></i> Attachment <i class="fas fa-times-circle"></i></small>
+                    </div>
+                    </form>
+                    <button type="button" class="btn btn-primary align-items-start">Add</button>
+
+
+
                 </div>
               </div>
             </div>
