--- a/pages/editProfile/editprofile.html
+++ b/pages/editProfile/editprofile.html
@@ -181,7 +181,7 @@
                             <img class="profile-pic" style="width: 105%;margin:-3%;box-shadow: 0px -1px 9px #666;"
                                 src="../../images/cover.jpg" />
                         </div>
-                        <div class="row no-gutters" style="z-index: 2;
+                        <div class="row no-gutters " style="z-index: 2;
                         position: absolute;
                         margin-top: 7%;">
                             <div class="col-lg-1 col-md-1"></div>
@@ -398,7 +398,7 @@
                                                 aria-labelledby="area-tab">
                                                 <div class="  ">
                                                     <div class="area-head justify-content-center">
-                                                        <p>Hi Super. Tell us who you are.</p>
+                                                        <p class="qfont1">Hi Super. Tell us who you are.</p>
                                                         <form>
                                                             <div class="form-group">
                                                                 <input type="text" class="form-control search-input"
@@ -688,7 +688,8 @@
                                                     </div>
                                                     <div class="area-head justify-content-center"
                                                         style="display: none;">
-                                                        <p>Tell us about the skills you're interested in.</p>
+                                                        <p class="qfont">Tell us about the skills you're interested in.
+                                                        </p>
                                                         <form>
                                                             <div class="form-group">
                                                                 <input type="text" class="form-control search-input"
@@ -887,7 +888,9 @@
                                                 aria-labelledby="achievement">
                                                 <div class="row">
                                                     <div class="activement-title col-md-6">
-                                                        <h4>Share your achievements with us! You can also show us a
+                                                        <h4 class="qfont qfont1">Share your achievements with us! You
+                                                            can also
+                                                            show us a
                                                             photo of the memory.</h4>
                                                     </div>
                                                     <div class="Achive_img col-md-6">
@@ -928,7 +931,9 @@
                                                 role="tabpanel" aria-labelledby="workexperience">
                                                 <div class="row ml-5">
                                                     <div class="workexperience-title col-md-6">
-                                                        <h4 style="margin: 13%;">Let's talk about yourwork experience.
+                                                        <h4 class="qfont qfont1" style="margin: 13%;">Let's talk about
+                                                            your
+                                                            work experience.
                                                         </h4>
                                                     </div>
                                                     <div class="Achive_img col-md-6">
@@ -939,9 +944,10 @@
                                                 <form>
                                                     <div class="row ml-5">
                                                         <div class="col-md-12">
-                                                            <div class="form-group degree-input"
-                                                                style="margin-left:10%;margin-right: 18%; font-size: 85%;">
-                                                                <label for="formGroupExampleInput">Profile Summary
+                                                            <div class="form-group degree-input  workexfont">
+                                                                <label class="fontsmallscreen"
+                                                                    for="formGroupExampleInput">Profile
+                                                                    Summary
                                                                     :(A short and simple summary wins hearts!)
                                                                 </label>
 
@@ -954,9 +960,9 @@
                                                             Improves manufacturing efficiency by analyzing and planning work flow, space requirements, and equipment layout.
                                                             Assures product and process quality by designing testing methods; testing finished- product and process capabilities; establishing standards; confirming manufacturing processes.</textarea>
                                                     </div>
-                                                    <div class=" col-md-8 card" style="margin-left:18%;">
-                                                        <div class="form-group degree-input ">
-                                                            <div class="col close-degree">
+                                                    <div class=" col-md-8 card adjustcard smallscreen">
+                                                        <div class=" form-group degree-input ">
+                                                            <div class=" col close-degree">
                                                                 <i style="float: right;"
                                                                     class="fas fa-times-circle"></i>
                                                             </div>
@@ -1015,7 +1021,8 @@
                                                 </div>
                                                 <div class="row mt-3 mb-3 justify-content-center">
                                                     <button type="button" class="btn primary-btn"> <i
-                                                            class="fas fa-save"></i> Save</button>
+                                                            class="fas fa-save"></i>
+                                                        Save</button>
                                                 </div>
                                             </div>
 
@@ -1023,7 +1030,8 @@
                                                 role="tabpanel" aria-labelledby="qualification">
                                                 <div class="row ml-5">
                                                     <div class="qualification-title col-md-6">
-                                                        <h4>What year did you graduate? Share your academic
+                                                        <h4 class="qfont qfont1">What year did you graduate? Share your
+                                                            academic
                                                             accomplishments with us.</h4>
                                                     </div>
                                                     <div class="Achive_img col-md-6">
@@ -1031,7 +1039,7 @@
                                                     </div>
                                                 </div>
                                                 <form>
-                                                    <div class="row ml-5">
+                                                    <div class="row ml-5" style="margin-right:10%">
                                                         <div class="col-md-6">
                                                             <div class="form-group degree-input">
                                                                 <label for="formGroupExampleInput">Degree / Certificate
@@ -1041,9 +1049,9 @@
                                                                     id="formGroupExampleInput" placeholder="">
                                                             </div>
                                                         </div>
-                                                        <div class="col col-md-3">
+                                                        <div class="col col-md-3 ">
                                                             <div class="dropdown year-select">
-                                                                <button class="btn  dropdown-toggle  btn-lg"
+                                                                <button class="btn  dropdown-toggle  btn-lg setdropdown"
                                                                     type="button" id="dropdownMenu2"
                                                                     data-toggle="dropdown" aria-haspopup="true"
                                                                     aria-expanded="false">
@@ -1061,7 +1069,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col close-degree">
-                                                            <i class="fas fa-times-circle"></i>
+                                                            <i class="fas fa-times-circle crosssymbol"></i>
                                                         </div>
                                                     </div>
                                                 </form>
@@ -1072,7 +1080,8 @@
                                                 </div>
                                                 <div class="row mt-3 mb-3 justify-content-center">
                                                     <button type="button" class="btn primary-btn"> <i
-                                                            class="fas fa-save"></i> Save</button>
+                                                            class="fas fa-save"></i>
+                                                        Save</button>
                                                 </div>
                                             </div>
                                         </div>
