editprofile and portfolio changes

--- a/pages/editProfile/editprofile.html
+++ b/pages/editProfile/editprofile.html
@@ -173,17 +173,17 @@
             </div>
         </aside>
 
-        <div class="content-wrapper bcolor" style="background-color: gainsboro;width: 100%;min-height: 1109.859px;">
-            <div class="cotent">
-                <div class="container-fluid">
+        <div class="content-wrapper bcolor">
+            <div class="content">
+                <div class="container-fluid" style="background-color: gainsboro;">
                     <div class="row no-gutters">
-                        <div class="col-lg-12 col-md-12  ">
-                            <img class="profile-pic" style="width: 105%;margin:-3%;box-shadow: 0px -1px 9px #666;"
+                        <div class="col-lg-12 col-md-12 ">
+                            <img class="profile-pic" style="width: 107%;margin:-3%;box-shadow: 0px -1px 9px #666;"
                                 src="../../images/cover.jpg" />
                         </div>
                         <div class="row no-gutters " style="z-index: 2;
-                        position: absolute;
-                        margin-top: 7%;">
+                        margin-top: -4%;">
+                            <!-- position: absolute;  -->
                             <div class="col-lg-1 col-md-1"></div>
                             <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
                                 <div class="row">
@@ -196,34 +196,47 @@
                                     <div class="col-lg-12 col-md-12 text">Ahmednagar,Maharashatra,India</div>
                                     <p class="col-lg-12 col-md-12 text">superman@micafila.com</p>
                                     <div class="col-lg-12 col-md-12 text">Achievements</div>
-                                    <!-- <div style="box-shadow: 0 1px 3px rgb(0 0 0 / 20%);margin-top: 10%;">Worked with
-                                        Prabhat to set up
-                                        entire plant </div></br>
-                                    <div style="box-shadow: 0 1px 3px rgb(0 0 0 / 20%);">Set up complete workchain for
-                                        Korvo</div>
-                                    <div class=" col-lg-12 col-md-12 text" style="margin-top: 7%;">Work Experience</div>
-                                    <div class="col-lg-12 col-md-12" style="
-                                    text-align: justify;
-                                    padding: 0 0 1.5625vw;
-                                    margin: 0;
-                                    font-family: ROBOTOLIGHT;
-                                    font-size: calc(.875rem + ((1vw - 13.6px) * .7143));
-                                    color: #000;
-                                    line-height: 1.25vw;">Evaluates
-                                        manufacturing processes by designing
-                                        and conducting research programs; applying knowledge of product design,
-                                        fabrication, assembly, tooling, and materials; conferring with equipment
-                                        vendors; soliciting observations from operators.
-                                        Develops manufacturing processes by studying product requirements; researching,
-                                        designing, modifying, and testing manufacturing methods and equipment;
-                                        conferring with equipment vendors.
-                                        Improves manufacturing efficiency by analyzing and planning work flow, space
-                                        requirements, and equipment layout.
-                                        Assures product and process quality by designing testing methods; testing
-                                        finished- product and process capabilities; establishing standards; confirming
-                                        manufacturing processes.
+                                    <span></span>
+                                    <!-- <div class="row">
+                                        <div class="" style="box-shadow: 0 1px 3px rgb(0 0 0 / 20%);margin-top: 10%;">
+                                            Worked with
+                                            Prabhat to set up
+                                            entire plant
+                                            <img class="" style="width: 23%;" src="../../images/edit2.jpg"
+                                                alt="editpic" />
+                                        </div>
+                                        </br>
+                                    </div> -->
+                                    <!-- <div style="box-shadow: 0 1px 3px rgb(0 0 0 / 20%);">Set up complete workchain for
+                                        Korvo</div> -->
+                                    <!-- <div class="row">
+                                        <div class=" col-lg-12 col-md-12 text" style="margin-top: 7%;">Work Experience
+                                        </div>
+                                        <p class="sdparagraph" style="text-align: justify;
+                                        padding: 0 0 1.5625vw;
+                                        margin: 0;
+                                        font-family: ROBOTOLIGHT;
+                                        font-size: calc(.875rem + ((1vw - 13.6px) * .7143));
+                                        color: #000;
+                                        line-height: 1.25vw;">Evaluates
+                                            manufacturing processes by designing
+                                            and conducting research programs; applying knowledge of product design,
+                                            fabrication, assembly, tooling, and materials; conferring with equipment
+                                            vendors; soliciting observations from operators.
+                                            Develops manufacturing processes by studying product requirements;
+                                            researching,
+                                            designing, modifying, and testing manufacturing methods and equipment;
+                                            conferring with equipment vendors.
+                                            Improves manufacturing efficiency by analyzing and planning work flow, space
+                                            requirements, and equipment layout.
+                                            Assures product and process quality by designing testing methods; testing
+                                            finished- product and process capabilities; establishing standards;
+                                            confirming
+                                            manufacturing processes.
 
-                                        Technical Director at MyLogistics Pvt Ltd, Since 2001</div> -->
+                                            Technical Director at MyLogistics Pvt Ltd, Since 2001
+                                        </p>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="col-lg-1 col-md-1"></div>
@@ -284,7 +297,8 @@
                                                                 data-toggle="buttons">
                                                                 <label class="btn btn-primary m-1">
                                                                     <input type="radio" name="options"
-                                                                        autocomplete="off"> Male
+                                                                        autocomplete="off">
+                                                                    Male
                                                                 </label>
                                                                 <label class="btn btn-primary active m-1">
                                                                     <input type="radio" name="options"
@@ -292,7 +306,8 @@
                                                                 </label>
                                                                 <label class="btn btn-primary m-1">
                                                                     <input type="radio" name="options"
-                                                                        autocomplete="off"> Uncertain
+                                                                        autocomplete="off">
+                                                                    Uncertain
                                                                 </label>
                                                             </div>
                                                         </div>
@@ -394,26 +409,25 @@
                                                     <div class="col-md-3"></div>
                                                 </div>
                                             </div>
-                                            <div class="tab-pane fade  area-work" id="area" role="tabpanel"
-                                                aria-labelledby="area-tab">
-                                                <div class="  ">
-                                                    <div class="area-head justify-content-center">
+                                            <div class="tab-pane fade area-work" id="area" role="tabpanel"
+                                                aria-labelledby="area">
+                                                <div class="row">
+                                                    <div class="col-md-3"></div>
+                                                    <div class="col-md-6 col-sm-6">
                                                         <p class="qfont1">Hi Super. Tell us who you are.</p>
-                                                        <form>
-                                                            <div class="form-group">
-                                                                <input type="text" class="form-control search-input"
-                                                                    id="exampleInputEmail1" aria-describedby="emailHelp"
-                                                                    placeholder="Artist, Architect, Doctor..." />
-                                                            </div>
-                                                        </form>
+                                                        <!-- <form> -->
+                                                        <div class="">
+                                                            <input type="text" class="form-control search-input"
+                                                                id="exampleInputEmail1" aria-describedby="emailHelp"
+                                                                placeholder="Artist, Architect, Doctor..." />
+                                                        </div>
+                                                        <!-- </form> -->
                                                     </div>
+                                                    <div class="col-md-3"></div>
                                                     <div class="ml-3 mr-3 primary-skill-carosuel">
                                                         <div id="carouselExampleIndicators" class="carousel slide"
                                                             data-ride="carousel">
-                                                            <!-- <ol class="carousel-indicators">
-                          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        </ol> -->
+
                                                             <div class="carousel-inner">
                                                                 <div class="carousel-item active">
                                                                     <div class="row mt-3 ml-3 mr-3">
@@ -927,7 +941,7 @@
 
 
                                             </div>
-                                            <div class="tab-pane fade work-experience " id="workexperience"
+                                            <div class="tab-pane fade work-experience" id="workexperience"
                                                 role="tabpanel" aria-labelledby="workexperience">
                                                 <div class="row ml-5">
                                                     <div class="workexperience-title col-md-6">
