--- a/pages/beMyMentor/beMyMentor.html
+++ b/pages/beMyMentor/beMyMentor.html
@@ -252,6 +252,14 @@
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="pages/calendar.html" class="nav-link">
+                                <i class="premium-icon fa"></i>
+                                <p>
+                                    Analytics
+                                </p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
