--- a/pages/editProfile/editprofile.html
+++ b/pages/editProfile/editprofile.html
@@ -27,7 +27,7 @@
 </head>
 
 <body class="hold-transition sidebar-mini" style="background: #e4e4e4;">
-    <div class="wrapper">
+    <div class="wrapper" style="background-color: white;position: none;">
         <!-- Navbar Main -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="box-shadow: 0px -1px 9px #666;">
             <!-- Left navbar links -->
@@ -175,7 +175,7 @@
 
         <div class="content-wrapper bcolor">
             <div class="content">
-                <div class="container-fluid" style="background-color: gainsboro;">
+                <div class="container-fluid">
                     <div class="row no-gutters">
                         <div class="col-lg-12 col-md-12 ">
                             <img class="profile-pic" style="width: 107%;margin:-3%;box-shadow: 0px -1px 9px #666;"
@@ -183,7 +183,6 @@
                         </div>
                         <div class="row no-gutters " style="z-index: 2;
                         margin-top: -4%;">
-                            <!-- position: absolute;  -->
                             <div class="col-lg-1 col-md-1"></div>
                             <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
                                 <div class="row">
@@ -244,7 +243,7 @@
                                 <div class="profile_cnt">
                                     <div class="tab_wrapper first_tab">
                                         <ul class="nav nav-tabs" id="myTab" role="tablist"
-                                            style="background-color:white;">
+                                            style="background-color:white;border-bottom: none;">
                                             <li class="nav-item">
                                                 <a class="nav-link" id="home-tab" data-toggle="tab" href="#home"
                                                     role="tab" aria-controls="home" aria-selected="true">Bio</a>
@@ -1101,66 +1100,33 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-                                <script src="js/responsive-tabs.min.js" type="text/javascript"></script>
-                                <!-- REQUIRED SCRIPTS -->
-                                <!-- jQuery -->
-                                <script src="../../plugins/jquery/jquery.min.js"></script>
-                                <!-- Bootstrap -->
-                                <script src="../../plugins/bootstrap/js/bootstrap.js"></script>
-                                <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-                                <!-- AdminLTE -->
-                                <script src="../../dist/js/adminlte.js"></script>
-                                <!-- OPTIONAL SCRIPTS -->
-                                <script src="../../plugins/chart.js/Chart.min.js"></script>
-                                <!-- AdminLTE for demo purposes -->
-                                <script src="../../dist/js/demo.js"></script>
-                                <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-                                <script src="../../dist/js/pages/dashboard3.js"></script>
-                                <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
-                                    type="text/javascript"></script>
+    <script src="js/responsive-tabs.min.js" type="text/javascript"></script>
+    <!-- REQUIRED SCRIPTS -->
+    <!-- jQuery -->
+    <script src="../../plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="../../plugins/bootstrap/js/bootstrap.js"></script>
+    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- AdminLTE -->
+    <script src="../../dist/js/adminlte.js"></script>
+    <!-- OPTIONAL SCRIPTS -->
+    <script src="../../plugins/chart.js/Chart.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="../../dist/js/demo.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <script src="../../dist/js/pages/dashboard3.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-                                <script>
-                                    $(document).ready(function () {
-                                        console.log("test");
-                                        $("#action_menu_btn").click(function () {
-                                            $(".action_menu").toggle();
-                                        });
-                                        $(".dropMenu").click(function () {
-                                            $(".dropMenu ul").toggle();
-                                            $(this).toggleClass("current");
-                                        });
 
-                                        $(".pplMsg").click(function () {
-                                            $(".inboxMsg, .scrollPo").css({ left: 0 });
-                                            $(".inboxName").toggleClass("leffaddd");
-                                            $(".responsive-tabs-panel").toggleClass("scrollPo");
-                                        });
-
-                                        $(".backarrw").click(function () {
-                                            $(".inboxMsg").css({ left: "100%" });
-                                            $(".inboxName").toggleClass("leffaddd");
-                                        });
-
-                                        $(".SubMenu").click(function () {
-                                            $(".inboxMenu").toggle("leffaddd");
-                                        });
-                                    });
-                                    $(window).load(function () {
-                                        $(".btn-nav").on("click tap", function () {
-                                            //$(".nav-container").toggleClass("showNav hideNav").removeClass("hidden");
-                                            $(this).toggleClass("animated");
-                                        });
-                                    });
-
-                                    $(document).ready(function () {
-                                        $(".dropMenu").click(function () {
-                                            $(".dropMenu ul").toggle();
-                                            $(this).toggleClass("current");
-                                        });
-                                    });
-                                </script>
-                                <script src="js/responsive-tabs.min.js" type="text/javascript"></script>
+    <script src="js/responsive-tabs.min.js" type="text/javascript"></script>
 </body>
 
 </html>
