--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -28,7 +28,7 @@
 </head>
 
 <body class="hold-transition sidebar-mini" style="background: #e4e4e4;">
-    <div class="wrapper">
+    <div class="wrapper" style="background-color:white;">
         <!-- Navbar Main -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="box-shadow: 0px -1px 9px #666;">
             <!-- Left navbar links -->
@@ -176,14 +176,15 @@
 
         <div class="content-wrapper bcolor">
             <div class="content">
-                <div class="container-fluid" style="background-color: gainsboro;">
+                <div class="container-fluid">
                     <div class="row no-gutters">
                         <div class="col-lg-12 col-md-12  ">
-                            <img class="profile-pic" style="width: 107%;margin:-3%;box-shadow: 0px -1px 9px #666;"
+                            <img class="profile-pic"
+                                style="width: 107%;margin: -13%;margin-left: -2%; box-shadow: 0px -1px 9px #666;"
                                 src="../../images/uploadedImg.png" />
                         </div>
                         <div class="row no-gutters " style="z-index: 2;
-                        margin-top: -4%;">
+                        margin-top: 5%;">
                             <div class="col-lg-1 col-md-1"></div>
                             <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
                                 <div class="row">
@@ -220,9 +221,9 @@
                             <div class="col-lg-1 col-md-1"></div>
                             <div class=" col-lg-8 col-md-8 col-sm-12 col-xs-12 mainform ">
                                 <div class="profile_cnt">
-                                    <div class="tab_wrapper first_tab">
+                                    <div class="tab_wrapper first_tab" style="margin-right: -2%;">
                                         <ul class="nav nav-tabs" id="myTab" role="tablist"
-                                            style="background-color:white;">
+                                            style="background-color:white;border-bottom: none;">
                                             <li class="nav-item ">
                                                 <a class="nav-link ssdesign1" id="home-tab" data-toggle="tab"
                                                     href="#home" role="tab" aria-controls="home"
@@ -256,33 +257,40 @@
                                                 aria-labelledby="home-tab">
                                                 <div class="row ">
                                                     <div class="col-md-12 " style="padding: 2%;">
-                                                        <div class="row">
-                                                            <div class="col-md-4 container ">
+                                                        <div class="row" style="margin-bottom: -1%;">
+                                                            <!-- <div class="col-md-4">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post4.png">
-                                                                <div class="middle">
-                                                                    <div class="text2">Title 1</div>
+                                                            </div> -->
+                                                            <div class="content col-md-4">
+                                                                <div class="content-overlay"></div> <img
+                                                                    class="content-image imgss" style="width: 100%;"
+                                                                    src="../../images/posts/post4.png">
+                                                                <div class="content-details fadeIn-bottom">
+                                                                    <h3 class="content-title">setting</h3>
+                                                                    <p class="content-text"><i
+                                                                            class="fa fa-map-marker"></i> Russia</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-md-4">
+                                                            <div class="col-md-4 " style="margin-left: -1%;">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post5.png">
                                                             </div>
-                                                            <div class="col-md-4">
+                                                            <div class="col-md-4" style="margin-left: -1%;">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post6.png">
                                                             </div>
                                                         </div>
-                                                        <div class="row" style="padding-top: 2%;">
+                                                        <div class="row" style="padding-top: 2%;margin-bottom: -1%;">
                                                             <div class="col-md-4">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post7.png">
                                                             </div>
-                                                            <div class="col-md-4">
+                                                            <div class="col-md-4" style="margin-left: -1%;">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post8.png">
                                                             </div>
-                                                            <div class="col-md-4">
+                                                            <div class="col-md-4" style="margin-left: -1%;">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post9.png">
                                                             </div>
@@ -292,11 +300,11 @@
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post11.png">
                                                             </div>
-                                                            <div class="col-md-4">
+                                                            <div class="col-md-4" style="margin-left: -1%;">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post12.png">
                                                             </div>
-                                                            <div class="col-md-4">
+                                                            <div class="col-md-4" style="margin-left: -1%;">
                                                                 <img class="imgss" style="width: 100%;"
                                                                     src="../../images/posts/post13.png">
                                                             </div>
@@ -410,23 +418,30 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-                                <script type="text/javascript" src="../../vendor/jquery/jquery.min.js"></script>
-                                <!-- <script src="js/responsive-tabs.min.js" type="text/javascript"></script> -->
-                                <!-- REQUIRED SCRIPTS -->
-                                <!-- jQuery -->
-                                <!-- <script src="../../plugins/jquery/jquery.min.js"></script> -->
-                                <!-- Bootstrap -->
-                                <script src="../../plugins/bootstrap/js/bootstrap.js"></script>
-                                <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-                                <!-- AdminLTE -->
-                                <script src="../../dist/js/adminlte.js"></script>
-                                <!-- OPTIONAL SCRIPTS -->
-                                <script src="../../plugins/chart.js/Chart.min.js"></script>
-                                <!-- AdminLTE for demo purposes -->
-                                <script src="../../dist/js/demo.js"></script>
-                                <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-                                <script src="../../dist/js/pages/dashboard3.js"></script>
+    <script type="text/javascript" src="../../vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="js/responsive-tabs.min.js" type="text/javascript"></script> -->
+    <!-- REQUIRED SCRIPTS -->
+    <!-- jQuery -->
+    <!-- <script src="../../plugins/jquery/jquery.min.js"></script> -->
+    <!-- Bootstrap -->
+    <script src="../../plugins/bootstrap/js/bootstrap.js"></script>
+    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- AdminLTE -->
+    <script src="../../dist/js/adminlte.js"></script>
+    <!-- OPTIONAL SCRIPTS -->
+    <script src="../../plugins/chart.js/Chart.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="../../dist/js/demo.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <script src="../../dist/js/pages/dashboard3.js"></script>
 
 
 
