--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -277,8 +277,8 @@
                                                                     src="../../images/posts/post5.png">
                                                             </div>
                                                             <div class="col-md-4" style="margin-left: -1%;">
-                                                                <img class="imgss" style="width: 100%;"
-                                                                    src="../../images/posts/post6.png">
+                                                                <img class="imgss" style="width: 100%;
+                                                                " src="../../images/posts/post6.png">
                                                             </div>
                                                         </div>
                                                         <div class="row" style="padding-top: 2%;margin-bottom: -1%;">
@@ -305,8 +305,8 @@
                                                                     src="../../images/posts/post12.png">
                                                             </div>
                                                             <div class="col-md-4" style="margin-left: -1%;">
-                                                                <img class="imgss" style="width: 100%;"
-                                                                    src="../../images/posts/post13.png">
+                                                                <img class="imgss" style="width: 97%;
+                                                                height: 76%;" src="../../images/addWork.png">
                                                             </div>
                                                         </div>
                                                     </div>
