--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -235,7 +235,7 @@
                 <div class="col-lg-1 col-md-1"></div>
                 <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                   <div class="row">
-                    <div class="col-lg-12 col-md-12 superimg">
+                    <div class="col-lg-12 col-md-12 superimg mb-2">
                       <img
                         class="profile-pic1"
                         style="width: 100%;"
