--- a/pages/feed/feed.html
+++ b/pages/feed/feed.html
@@ -18,10 +18,8 @@
   <!-- Theme style -->
   <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="../../dist/css/commonButton.css" />
-
-  <!-- <link rel=" stylesheet" type="text/css" href="sass/main.css" /> -->
-  <!-- <link rel="stylesheet" href="dist/css/adminlte.min.css"> -->
   <link rel="stylesheet" href="../../scss/adminlte.css" />
+  <link rel="stylesheet" href="../feed/feed.css" />
   <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
@@ -183,78 +181,100 @@
       </header>
       <section class="feed-card mt-4 justify-content-center smallscreendesign">
         <div class="row  ">
-          <div class="col-md-3">
-            <div class="card" style="width: 17rem;">
-              <img class="card-img-top" src="../../images/superman.png" alt="Card image cap" />
-              <div class="card-body row">
-                <div class="col-md-3">
-                  <img src="../../images/tania.png" width="50" alt="">
+          <div class="col-md-2 ">
+
+            <div class="card sscard1" style="box-shadow: 0 3px 9px rgb(0 0 0 / 16%);">
+              <img class="card-img-top " src="../../images/superman.png" alt="Card image cap" />
+              <div class="card-body row sssmallimg1">
+                <div class="col-md-3 ">
+                  <img src="../../images/tania.png" class="" style="margin-left: -27%;width: 140%" alt="">
                 </div>
-                <div class="col-md-8">
-                  <span class="card-text" style="display: inline-block;">
+                <div class="col-md-8 ">
+                  <span class="card-text sstext" style="display: inline-block;">
                     <label> Some quick </label>
                     <p>Artist</p>
                   </span>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 ssstar">
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+          <div class="col-md-2">
+            <div class="card sscard1" style="box-shadow: 0 3px 9px rgb(0 0 0 / 16%);">
+              <img class="card-img-top" src="../../images/superman.png" alt="Card image cap" />
+              <div class="card-body row sssmallimg1">
+                <div class="col-md-3">
+                  <img src="../../images/tania.png" style="margin-left: -27%;width: 140%" alt="">
+                </div>
+                <div class="col-md-8">
+                  <span class="card-text sstext" style="display: inline-block;">
+                    <label> Some quick </label>
+                    <p>Artist</p>
+                  </span>
+                </div>
+                <div class="col-md-1 ssstar">
                   <i class="fas fa-star"></i>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 17rem;">
+          <div class="col-md-2">
+            <div class="card sscard1" style="box-shadow: 0 3px 9px rgb(0 0 0 / 16%);">
               <img class="card-img-top" src="../../images/superman.png" alt="Card image cap" />
-              <div class="card-body row">
+              <div class="card-body row sssmallimg1">
                 <div class="col-md-3">
-                  <img src="../../images/tania.png" width="50" alt="">
+                  <img src="../../images/tania.png" style="margin-left: -27%;width: 140%" alt="">
                 </div>
                 <div class="col-md-8">
-                  <span class="card-text" style="display: inline-block;">
+                  <span class="card-text sstext" style="display: inline-block;">
                     <label> Some quick </label>
                     <p>Artist</p>
                   </span>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 ssstar">
                   <i class="fas fa-star"></i>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 17rem;">
+          <div class="col-md-2">
+            <div class="card sscard1" style="box-shadow: 0 3px 9px rgb(0 0 0 / 16%);">
               <img class="card-img-top" src="../../images/superman.png" alt="Card image cap" />
-              <div class="card-body row">
+              <div class="card-body row sssmallimg1">
                 <div class="col-md-3">
-                  <img src="../../images/tania.png" width="50" alt="">
+                  <img src="../../images/tania.png" style="margin-left: -27%;width: 140%" alt="">
                 </div>
                 <div class="col-md-8">
-                  <span class="card-text" style="display: inline-block;">
+                  <span class="card-text sstext" style="display: inline-block;">
                     <label> Some quick </label>
                     <p>Artist</p>
                   </span>
                 </div>
-                <div class="col-md-1">
-                  <i class="fas fa-star"></i>
+                <div class="col-md-1 ssstar">
+                  <i class="fas fa-star "></i>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 17rem;">
+          <div class="col-md-2">
+            <div class="card sscard1" style="box-shadow: 0 3px 9px rgb(0 0 0 / 16%);">
               <img class="card-img-top" src="../../images/superman.png" alt="Card image cap" />
-              <div class="card-body row">
+              <div class="card-body row sssmallimg1">
                 <div class="col-md-3">
-                  <img src="../../images/tania.png" width="50" alt="">
+                  <img src="../../images/tania.png" style="margin-left: -27%;width: 140%" alt="">
                 </div>
                 <div class="col-md-8">
-                  <span class="card-text" style="display: inline-block;">
+                  <span class="card-text sstext" style="display: inline-block;">
                     <label> Some quick </label>
                     <p>Artist</p>
                   </span>
                 </div>
-                <div class="col-md-1">
-                  <i class="fas fa-star"></i>
+                <div class="col-md-1 ssstar">
+                  <i class="fas fa-star "></i>
                 </div>
               </div>
             </div>
